# based64

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  raw.rs  uninit.rs
tests/: encode.rs
